--- a/README.textile
+++ b/README.textile
@@ -3,16 +3,15 @@ http://edgeguides.rubyonrails.org/engines.html
 h1. Installation
 
 	gem 'editables'
-	
-	copy migration file and run it
+		
+	rake editables:install:migrations
+	rake db:migrate
 	
 	add this to ApplicationController.rb
 	
 		class ApplicationController < ActionController::Base
 		  helper Editables::Engine.helpers
 		end
-		
-	rake editables:install:migrations
 	
 	<!-- add this to the top of your layout file right after the body tag 
 		
